# libmysmartgrid

./: CMakeLists.txt  README.md  libmysmartgridConfig.cmake.in
Dashboards/: CTestConfigLibMySmartGrid.cmake  do_test.cmake  run_continuous  run_nightly
libmysmartgrid/: CMakeLists.txt  webclient.cpp  webclient.h
modules/: FindNaCl.cmake
src/: CMakeLists.txt  get_sensor.cpp  heartbeat.cpp
